--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,15 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  animation: App-logo-spin infinite 30s linear;
+  height: 160px;
+  width: 160px;
+  border-radius: 70%;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #122;
+  height: 200px;
   padding: 20px;
   color: white;
 }
@@ -23,6 +25,11 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
