--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,7 +13,17 @@ body {
   // background: #73ecff;
 }
 .header{
-  font-size: 24px;
+  font-size: 25px;
+}
+.navitem{
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+}
+.navitem:hover{transform: scale(1.1);
+
 }
 
 // Home page
@@ -46,12 +56,12 @@ body {
 }
 
 .fb:hover {
-  color: #3B5998;
+  color: #00f;
   transform:scale(1.2);
 }
 
 .gh:hover {
-  color: #d34836;
+  color: #f00;
   transform:scale(1.2);
 }
 
