changing bgc of body.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 body {
   font-family: 'Chicle', cursive;
   font-size: 20px;
-  background: #a5eec5;
+  background: #73ecff;
   // background: #73ecff;
 }
 .header{
