adding more social icons to the footer...

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -60,6 +60,11 @@ body {
   transform:scale(1.2);
 }
 
+.xn:hover {
+  color: #0f0;
+  transform:scale(1.2);
+}
+
 .gh:hover {
   color: #f00;
   transform:scale(1.2);
@@ -67,6 +72,11 @@ body {
 
 .in:hover {
   color: #f39c12;
+  transform:scale(1.2);
+}
+
+.tw:hover {
+  color: #41f4df;
   transform:scale(1.2);
 }
 
